# FaceSecure-plus-plus

./: .gitignore  CMakeLists.txt  README.md  create_release.sh  install.sh  install_windows.ps1  run.sh
include/core/: AttendanceLogger.hpp  FaceDetector.hpp  FaceRecognizer.hpp  VoiceGreeter.hpp
include/gui/: MainWindow.hpp
src/: main.cpp
src/core/: AttendanceLogger.cpp  FaceDetector.cpp  FaceRecognizer.cpp  VoiceGreeter.cpp
src/gui/: MainWindow.cpp
